// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`--help=brief > matches its snapshot 1`] = `
"corpus expound — Say a great deal about very little.

Usage:
  corpus expound <target> [flags]

Arguments:
  <target>  The thing to expound upon.

Flags:
  --depth <number>  How far to go. (default: 2)
  --aside <string>  **A digression to include**, repeatably. (repeatable)

Global flags:
  --from <user|agent>  Who is acting, and therefore the git author of the server's auto-commit: \`user\` or \`agent\`.
  --json               Write exactly one machine-readable JSON value to stdout, and failures as \`{"error":{…}}\` to stderr.
  --workspace <path>   Workspace to act on, instead of searching upward from the current directory.
  --timeout <ms>       How long to wait for the workspace server before reporting it unreachable (exit 4). (default: 10000)
  --verbose            Include the stack trace when an unexpected internal error occurs.
  --no-color           Never emit ANSI colour.
  -h, --help[=<mode>]  Show help for the current topic or command and exit.
  --version            Print the version of the \`corpus\` tool and exit.

Run \`corpus expound --help\` for the full text and examples.
"
`;

exports[`--help=brief > matches its snapshot for a topic verb too 1`] = `
"corpus everything — Exercise every declarable flag and argument shape.

Usage:
  corpus everything <target> [note] [flags]

Arguments:
  <target>  The thing to act on.
  [note]    An optional note.

Flags:
  -l, --loud        A boolean flag.
  --title <text>    A string flag.
  --count <number>  A number flag with a default. (default: 3)
  --tag <string>    A repeatable string flag. (repeatable)

Global flags:
  --from <user|agent>  Who is acting, and therefore the git author of the server's auto-commit: \`user\` or \`agent\`.
  --json               Write exactly one machine-readable JSON value to stdout, and failures as \`{"error":{…}}\` to stderr.
  --workspace <path>   Workspace to act on, instead of searching upward from the current directory.
  --timeout <ms>       How long to wait for the workspace server before reporting it unreachable (exit 4). (default: 10000)
  --verbose            Include the stack trace when an unexpected internal error occurs.
  --no-color           Never emit ANSI colour.
  -h, --help[=<mode>]  Show help for the current topic or command and exit.
  --version            Print the version of the \`corpus\` tool and exit.

Run \`corpus everything --help\` for the full text and examples.
"
`;

exports[`renderCommandHelp > matches its snapshot 1`] = `
"corpus everything — Exercise every declarable flag and argument shape.

Used by the parser and help tests; never registered in the real registry.

Usage:
  corpus everything <target> [note] [flags]

Arguments:
  <target>  The thing to act on.
  [note]    An optional note.

Flags:
  -l, --loud        A boolean flag.
  --title <text>    A string flag.
  --count <number>  A number flag with a default. (default: 3)
  --tag <string>    A repeatable string flag. (repeatable)

Global flags:
  --from <user|agent>  Who is acting, and therefore the git author of the server's auto-commit: \`user\` or \`agent\`. Defaults to \`user\`; set \`CORPUS_FROM=agent\` to change the default for a session, and this flag still wins over it. Anything else is a usage error (exit 2) and no request is sent.
  --json               Write exactly one machine-readable JSON value to stdout, and failures as \`{"error":{…}}\` to stderr. The error carries \`code\`, \`message\` and \`hint\` — the recovery, in the same words a person is shown — plus \`details\` and \`changed\` where they apply. \`hint\` is always present and is \`null\` when there is no follow-up beyond the message, so absence never has to be guessed at.
  --workspace <path>   Workspace to act on, instead of searching upward from the current directory. Overrides CORPUS_WORKSPACE.
  --timeout <ms>       How long to wait for the workspace server before reporting it unreachable (exit 4). (default: 10000)
  --verbose            Include the stack trace when an unexpected internal error occurs.
  --no-color           Never emit ANSI colour. Implied whenever stdout is not a TTY.
  -h, --help[=<mode>]  Show help for the current topic or command and exit. Bare \`--help\` gives the full text: prose, whole flag descriptions, worked examples. \`--help=brief\` gives the synopsis and one line per argument and flag — the first sentence of each, so the two registers cannot disagree — and nothing else. The value is inline-only, so \`corpus doc list --help\` swallows nothing after it.
  --version            Print the version of the \`corpus\` tool and exit.

Examples:
  # Act loudly on doc-1.
  corpus everything doc-1 --loud
"
`;

exports[`renderRootHelp > matches its snapshot 1`] = `
"corpus — a fixture surface used only by tests.

Usage:
  corpus <command> [args] [flags]
  corpus <topic> <verb> [args] [flags]

Commands:
  everything  Exercise every declarable flag and argument shape.
  bootstrap   Run without a workspace or a server.

Topics:
  widget  Manage widgets.

Global flags:
  --from <user|agent>  Who is acting, and therefore the git author of the server's auto-commit: \`user\` or \`agent\`. Defaults to \`user\`; set \`CORPUS_FROM=agent\` to change the default for a session, and this flag still wins over it. Anything else is a usage error (exit 2) and no request is sent.
  --json               Write exactly one machine-readable JSON value to stdout, and failures as \`{"error":{…}}\` to stderr. The error carries \`code\`, \`message\` and \`hint\` — the recovery, in the same words a person is shown — plus \`details\` and \`changed\` where they apply. \`hint\` is always present and is \`null\` when there is no follow-up beyond the message, so absence never has to be guessed at.
  --workspace <path>   Workspace to act on, instead of searching upward from the current directory. Overrides CORPUS_WORKSPACE.
  --timeout <ms>       How long to wait for the workspace server before reporting it unreachable (exit 4). (default: 10000)
  --verbose            Include the stack trace when an unexpected internal error occurs.
  --no-color           Never emit ANSI colour. Implied whenever stdout is not a TTY.
  -h, --help[=<mode>]  Show help for the current topic or command and exit. Bare \`--help\` gives the full text: prose, whole flag descriptions, worked examples. \`--help=brief\` gives the synopsis and one line per argument and flag — the first sentence of each, so the two registers cannot disagree — and nothing else. The value is inline-only, so \`corpus doc list --help\` swallows nothing after it.
  --version            Print the version of the \`corpus\` tool and exit.

Run \`corpus <command> --help\` or \`corpus <topic> --help\` for details.
Add \`=brief\` to any of them for names and one line each.
Full command reference: docs/cli.md in the corpus repository.
"
`;

exports[`renderTopicHelp > matches its snapshot 1`] = `
"corpus widget — Manage widgets.

A fixture topic standing in for \`server\`, \`doc\` and friends.

Usage:
  corpus widget <verb> [args] [flags]

Verbs:
  list  List widgets.
  show  Show one widget.

Global flags:
  --from <user|agent>  Who is acting, and therefore the git author of the server's auto-commit: \`user\` or \`agent\`. Defaults to \`user\`; set \`CORPUS_FROM=agent\` to change the default for a session, and this flag still wins over it. Anything else is a usage error (exit 2) and no request is sent.
  --json               Write exactly one machine-readable JSON value to stdout, and failures as \`{"error":{…}}\` to stderr. The error carries \`code\`, \`message\` and \`hint\` — the recovery, in the same words a person is shown — plus \`details\` and \`changed\` where they apply. \`hint\` is always present and is \`null\` when there is no follow-up beyond the message, so absence never has to be guessed at.
  --workspace <path>   Workspace to act on, instead of searching upward from the current directory. Overrides CORPUS_WORKSPACE.
  --timeout <ms>       How long to wait for the workspace server before reporting it unreachable (exit 4). (default: 10000)
  --verbose            Include the stack trace when an unexpected internal error occurs.
  --no-color           Never emit ANSI colour. Implied whenever stdout is not a TTY.
  -h, --help[=<mode>]  Show help for the current topic or command and exit. Bare \`--help\` gives the full text: prose, whole flag descriptions, worked examples. \`--help=brief\` gives the synopsis and one line per argument and flag — the first sentence of each, so the two registers cannot disagree — and nothing else. The value is inline-only, so \`corpus doc list --help\` swallows nothing after it.
  --version            Print the version of the \`corpus\` tool and exit.

Run \`corpus widget <verb> --help\` for a verb's arguments.
"
`;
